[workspace]
members = ["third-party/*"]

[package]
name = "flars"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
authors = ["Des-Nerger <mixerator@rambler.ru>"]
description = 'A reimplementation of "Free/Libre Action Roleplaying Engine" (FLARE) v0.0x'
homepage = "https://github.com/Des-Nerger/flars"
repository = "https://github.com/Des-Nerger/flars"

[profile.release]
strip = true
# lto = true

[dependencies]
sdl2 = { version = "0.35", features = ["image"] }
tiled-json-rs = "0.2"
toml_edit = { version = "0.19", features = ["serde", "perf"] }
glam = "0.22"
strum = { version = "0.24", features = ["derive"] }
ary = { path = "third-party/ary" }
serde = { version = "1.0", features = ["derive"] }

