[workspace]
members = ["third-party/*"]

[package]
name = "flars"
version = "0.1.7"
edition = "2021"
license = "GPL-3.0"
authors = ["Des-Nerger <mixerator@rambler.ru>"]
description = 'A reimplementation of "Free/Libre Action Roleplaying Engine" (FLARE) v0.0x'
homepage = "https://github.com/Des-Nerger/flars"
repository = "https://github.com/Des-Nerger/flars"

[profile.release]
strip = true
# lto = true

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[dependencies]
tiled-json-rs = "0"
toml_edit = { version = "0", features = ["serde", "perf"] }
glam = "0"
strum = { version = "0", features = ["derive"] }
ary = { path = "third-party/ary" }
serde = { version = "1", features = ["derive"] }
glium_sdl2 = { git = "https://github.com/Des-Nerger/glium-sdl2" }
sdl2 = "0"
glium = { version = "0", default-features = false }
image = { version = "0", default-features = false, features = ["png"] }

